# swift

./: .gitignore  .gitmodules  1.py  CMakeLists.txt  CONTRIBUTING.md  README.md  adb_push_speed_benchmark_torch.sh  browser-extension.json  mypy-strict.ini  setup.py  vulkan_bench.sh  vulkan_build.sh  vulkan_build_android_adb.sh  vulkan_build_android_adb_local.sh  vulkan_build_android_adb_local_asan.sh  vulkan_model.py
.circleci/: config.yml  generate_config_yml.py
.circleci/verbatim-sources/job-specs/: pytorch-job-specs.yml
.devcontainer/: Dockerfile
.github/workflows/: lint.yml
.jenkins/pytorch/: test.sh
android/: .gitignore  gradle.properties
android/gradle/: bintray.gradle  release.gradle  snapshot_artifactory.gradle
android/pytorch_android/: build.gradle  gradle.properties
android/pytorch_android_torchvision/: CMakeLists.txt
android/pytorch_android_torchvision/src/main/cpp/: pytorch_torchvision_jni.cpp
android/pytorch_android_torchvision/src/main/java/org/pytorch/torchvision/: PyTorchVision.java  TensorImageUtils.java
android/test_app/: run_dict_model.py  test_dictstr_model.py
android/test_app/app/: build.gradle
aten/src/ATen/: BatchingRegistrations.cpp  CMakeLists.txt  ConjugateFallback.cpp  Context.cpp  Context.h  Dispatch.h  Overhead.cpp  TensorIndexing.h  TensorMeta.h  TensorOperators.h  function_wrapper.py  native_parse.py  record_function.cpp
aten/src/ATen/native/autotune/test_scripts/: CMakeLists.txt  Gridsearch.ipynb  benchmark_convolution.cpp  build.sh  gridsearch.cpp  measure_torchvision.py  parse_results.ipynb  results.txt  test.cpp
aten/src/THNN/: init.cpp
benchmarks/experimental_components/examples/: conv_overhead.py
benchmarks/fastrnns/: factory.py  scratch.py  test_bench.py
benchmarks/instruction_counts/execution/: runner.py  work.py
benchmarks/instruction_counts/worker/: main.py
binaries/: speed_benchmark_torch.cc
c10/: CMakeLists.txt
c10/benchmark/: CMakeLists.txt
c10/core/: DefaultDtype.cpp  TensorOptions.h
c10/test/util/: complex_math_test_common.h
c10/util/: Exception.h  typeid.cpp
caffe2/: CMakeLists.txt
caffe2/contrib/aten/: gen_op.py
caffe2/operators/: lengths_reducer_ops.cc  lengths_reducer_ops.h
caffe2/python/: hypothesis_test.py
cmake/: Dependencies.cmake
docs/source/: autograd.rst  nn.rst  quantization.rst
docs/source/notes/: autograd.rst  cuda.rst
packaging/wheel/: build.sh  build_common.sh
proto/: CMakeLists.txt  README.md  array_addition.cpp  hash_benchmark.cpp  hello_world.cpp  scalar_addition.cpp  tensor_addition.cpp
test/: common_device_type.py  common_quantization.py  common_utils.py  dist_utils.py  rpc_test.py  run_test.py  test_ao.py  test_autograd.py  test_bundled_inputs.py  test_cpp_api_parity.py  test_cpp_api_parity_backup.py  test_cpp_extensions.py  test_cuda.py  test_foreach.py  test_jit.py  test_linalg.py  test_namedtuple_return_api.py  test_nn.py  test_profiler.py  test_quantization.py  test_quantized.py  test_reductions.py  test_tensor_creation_ops.py  test_torch.py  tinytest.py
test/autograd/: test_load_derivatives.py
test/backward_compatibility/: check_backward_compatibility.py
test/cpp/api/: CMakeLists.txt  any.cpp  autograd.cpp  functional.cpp  init_baseline.h  modules.cpp  sequential.cpp  serialize.cpp  support.h  tensor.cpp  tensor_indexing.cpp
test/cpp/jit/: test_custom_class.cpp  test_lite_interpreter.cpp
test/cpp_api_parity/: common_test_harness.py  functional_impl_check.py  functional_impl_check_new_version.py  functional_impl_check_v2.py  module_impl_check.py  module_impl_check_v2.py  parity-tracker.md  sample_functional.py  sample_module.py  torch_nn_functionals.py  torch_nn_modules.py  utils.py
test/cpp_api_parity/nn/: module_configs.py  module_test_harness.py
test/distributed/: test_c10d.py  test_distributed_spawn.py
test/jit/: test_backend_nnapi.py  test_cuda.py  test_module_interface.py  test_union.py
test/onnx/: test_operators.py  test_pytorch_onnx_onnxruntime.py
test/optim/: cudnn_conv_v7_benchmark_cudnnConvolutionBwdDataAlgo_t.cache  cudnn_conv_v7_benchmark_cudnnConvolutionBwdFilterAlgo_t.cache  cudnn_conv_v7_benchmark_cudnnConvolutionFwdAlgo_t.cache  test_undo.py
test/quantization/: test_quantize.py  test_quantized.py
tools/: build_variables.bzl  build_variables.py
tools/autograd/: derivatives.yaml  gen_autograd_functions.py  gen_inplace_or_view_type.py  gen_python_functions.py  gen_trace_type.py  gen_variable_factories.py  gen_variable_type.py  load_derivatives.py
tools/codegen/: gen.py  model.py
tools/codegen/api/: cpp.py  (+1 more)
tools/jit/: gen_jit_dispatch.py
tools/pyi/: gen_pyi.py
torch/: CMakeLists.txt  __init__.py  _jit_internal.py  _ops.py  _tensor_docs.py  _torch_docs.py  _utils_internal.py  functional.py  library.h  overrides.py
torch/_C/: __init__.pyi.in
torch/autograd/: __init__.py  gradcheck.py  saved_variable_default_hooks.py
torch/csrc/: Module.cpp
torch/cuda/: __init__.py
torch/distributed/: data_parallel.py  distributed_c10d.py  fault_tolerance.py
torch/fx/: node.py
torch/hermetic/: __init__.py  _custom_import_pickler.py  _importlib.py  _mock.py  _mock_zipreader.py  exporter.py  find_file_dependencies.py  importer.py
torch/jit/: __init__.py  _monkeytype_config.py  _script.py  frontend.py
torch/linalg/: __init__.py
torch/onnx/: __init__.py  symbolic_helper.py  symbolic_opset9.py  utils.py
torch/optim/: __init__.py  __init__.pyi  _functional.py  adam.py  adamw.py  bertadam.py  lr_scheduler.py  optimizer.py  sgd.py
torch/testing/: _asserts.py
torch/utils/: bundled_inputs.py  cpp_extension.py
torch/utils/benchmark/utils/valgrind_wrapper/: CMakeLists.txt  bindings.cpp  gen_CMakeLists.txt  timer_callgrind_template.cpp  timer_interface.py  toggle_callgrind.cpp  toggle_callgrind.h
torchpy/: .gitignore  CMakeLists.txt  README.md  libctype.c  torchpy.cpp  torchpy.h
torchpy/example/: generate_examples.py  test_models.cpp  test_threads.cpp
torchpy/interpreter/: CMakeLists.txt  CMakeTorchPython.txt  freeze.py  freeze_stdlib.py  interpreter.cpp  interpreter_impl.h  test_main.cpp
(+412 files in other folders)
